2008-04-09  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/dvb/dvb.xml:
	Make 'code-rate-hp' a string - it should accept non-fractions,
	too.


2008-04-09  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Fix up chaining up of configure_pipeline.
	Fix up naming of second tee element.

2008-04-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Rename do_check to do_check_dvb because it seems do_check
	is not called of the final object's class but from the
	object's DVBTSProducer's class.

2008-03-26  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Make MpegTSSplitter inherit from DVBTSProducer so the
	bus message handling is re-used.
	DVB now chains up its configure_pipeline to DVBTSProducer
	to reduce code duplication and also no longer duplicates
	init method.

2008-03-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/admin_gtk.py:
	* flumotion/component/dvb/dvb.py:
	Add a channel information node to the dvb producers.

2008-03-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.xml:
	Add back pids property for backwards compatibility, even
	though it is just going to be ignored.

2008-02-29  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/admin_gtk.py:
	Rename Signal Stats to Signal Statistics.

2008-02-29  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* conf/dvb-t-two-channels-ogg.xml:
	* conf/dvb-t-two-channels.xml:
	Example flow files to have 2 channels streamed from same
	adapter.

2008-02-29  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvbbin.py:
	Remove old unused experimental code.

2008-02-29  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/admin_gtk.py:
	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml: